[package]
name = "bybit-kline"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace to exclude from parent workspace

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = { version = "2.0.8" }

[[bin]]
name = "bybit-kline"
path = "src/main.rs"